--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -53,3 +53,13 @@
 .LoginText{
     color: #2A7AE4;
 }
+
+
+@media (max-width: 400px) {
+    .header{
+        display: flex;
+    }
+    .header_buscador{
+        display: none;
+    }
+}
