--- a/assets/css/nendoroid/nendoroid.css
+++ b/assets/css/nendoroid/nendoroid.css
@@ -53,3 +53,11 @@
     font-weight: 700;
     color:#2A7AE4;
 }
+
+@media (max-width: 400px) {
+    .nendoroid{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+}
